--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/favicon-32.png" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cuentas Públicas de España en Tiempo Real</title>
     <meta name="description" content="Visualiza la deuda pública, el gasto en pensiones y otros indicadores fiscales de España actualizados en tiempo real. Datos del Banco de España, INE y Seguridad Social." />
