feat: switch to path-based language routing

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <link rel="sitemap" type="application/xml" href="/sitemap.xml" />
     <link rel="alternate" type="application/rss+xml" title="Cuentas Públicas RSS" href="/feed.xml" />
     <link rel="alternate" type="text/html" hreflang="es" href="https://cuentas-publicas.es/" />
-    <link rel="alternate" type="text/html" hreflang="en" href="https://cuentas-publicas.es/?lang=en" />
+    <link rel="alternate" type="text/html" hreflang="en" href="https://cuentas-publicas.es/en/" />
     <link rel="alternate" type="text/html" href="https://cuentas-publicas.es/seo-snapshot.html" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
