--- a/index.html
+++ b/index.html
@@ -24,10 +24,16 @@
     <meta name="twitter:description" content="Deuda pública, pensiones y gasto público de España. Datos oficiales actualizados en tiempo real." />
     <meta name="twitter:image" content="https://cuentas-publicas.es/og-image.png" />
     <meta name="theme-color" content="#1e3a5f" />
+    <meta name="robots" content="index,follow,max-image-preview:large" />
     <link rel="canonical" href="https://cuentas-publicas.es/" />
+    <link rel="sitemap" type="application/xml" href="/sitemap.xml" />
+    <link rel="alternate" type="application/rss+xml" title="Cuentas Públicas RSS" href="/feed.xml" />
+    <link rel="alternate" type="text/html" hreflang="es" href="https://cuentas-publicas.es/" />
+    <link rel="alternate" type="text/html" hreflang="en" href="https://cuentas-publicas.es/?lang=en" />
+    <link rel="alternate" type="text/html" href="https://cuentas-publicas.es/seo-snapshot.html" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;600;700&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,500;9..144,700&family=JetBrains+Mono:wght@400;600;700&family=Manrope:wght@400;500;600;700&display=swap" rel="stylesheet" />
   </head>
   <body>
     <noscript>
@@ -49,6 +55,46 @@
           }
         }
       })();
+    </script>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "WebSite",
+        "name": "Cuentas Públicas de España",
+        "url": "https://cuentas-publicas.es/",
+        "description": "Dashboard de deuda pública, pensiones e indicadores fiscales de España con datos oficiales.",
+        "inLanguage": ["es", "en"],
+        "potentialAction": {
+          "@type": "SearchAction",
+          "target": "https://cuentas-publicas.es/?section={section}",
+          "query-input": "required name=section"
+        }
+      }
+    </script>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Dataset",
+        "name": "Cuentas Públicas de España — API v1",
+        "description": "Datos abiertos de deuda, pensiones, gasto e ingresos públicos de España.",
+        "url": "https://cuentas-publicas.es/api/v1/index.json",
+        "creator": {
+          "@type": "Organization",
+          "name": "Cuentas Públicas de España"
+        },
+        "distribution": [
+          {
+            "@type": "DataDownload",
+            "encodingFormat": "application/json",
+            "contentUrl": "https://cuentas-publicas.es/api/v1/debt.json"
+          },
+          {
+            "@type": "DataDownload",
+            "encodingFormat": "application/json",
+            "contentUrl": "https://cuentas-publicas.es/api/v1/meta.json"
+          }
+        ]
+      }
     </script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
