feat: add tax revenue section with AEAT data pipeline
Add granular tax revenue breakdown by tax type (IRPF, IVA, Sociedades,
IIEE, IRNR) and by autonomous community using AEAT open data. Includes
drilldown into IIEE and Resto subcategories, CCAA ranking with top-3
highlighting, and foral regime note for Navarra/País Vasco.

- New data pipeline (aeat.mjs): downloads two AEAT Excel files (national
  series 1995-present, delegaciones 2007-present), aggregates monthly to
  annual, validates totals, falls back to reference data on failure
- New UI component (TaxRevenueBlock): Nacional/CCAA tabs, 4 StatCards,
  year selector, tax type filter, URL state persistence
- Types, i18n (es/en), methodology, roadmap, docs all updated
- 16 new tests (211 total, all passing)

--- a/index.html
+++ b/index.html
@@ -30,6 +30,38 @@
     <link rel="alternate" type="application/rss+xml" title="Cuentas Públicas RSS" href="/feed.xml" />
     <link rel="alternate" type="text/html" hreflang="es" href="https://cuentas-publicas.es/" />
     <link rel="alternate" type="text/html" hreflang="en" href="https://cuentas-publicas.es/en/" />
+    <script>
+      (function () {
+        const path = window.location.pathname;
+        const isEnglishPath = path === "/en" || path.startsWith("/en/");
+        if (!isEnglishPath) return;
+
+        const englishTitle = "Spain Public Accounts in Real Time";
+        const englishDescription =
+          "Public debt, pensions and spending indicators for Spain with official up-to-date data.";
+        const normalizedPath = path.endsWith("/") ? path : `${path}/`;
+        const canonicalHref = `${window.location.origin}${normalizedPath}`;
+
+        document.documentElement.lang = "en";
+        document.title = englishTitle;
+
+        const updateAttribute = (selector, attribute, value) => {
+          const element = document.head.querySelector(selector);
+          if (element) {
+            element.setAttribute(attribute, value);
+          }
+        };
+
+        updateAttribute('meta[name="description"]', "content", englishDescription);
+        updateAttribute('meta[property="og:title"]', "content", englishTitle);
+        updateAttribute('meta[property="og:description"]', "content", englishDescription);
+        updateAttribute('meta[property="og:locale"]', "content", "en_US");
+        updateAttribute('meta[property="og:url"]', "content", canonicalHref);
+        updateAttribute('meta[name="twitter:title"]', "content", englishTitle);
+        updateAttribute('meta[name="twitter:description"]', "content", englishDescription);
+        updateAttribute('link[rel="canonical"]', "href", canonicalHref);
+      })();
+    </script>
     <link rel="alternate" type="text/html" href="https://cuentas-publicas.es/seo-snapshot.html" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
