chore: refresh data sources (tax-revenue now has 31 years + 17 CCAA)

--- a/public/en/sections/tax-revenue.html
+++ b/public/en/sections/tax-revenue.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Methodology and Sources | Spain Public Accounts</title>
-    <meta name="description" content="How dashboard data is downloaded, validated and transformed." />
-    <link rel="canonical" href="https://cuentas-publicas.es/en/sections/methodology.html" />
-    <link rel="alternate" hreflang="es" href="https://cuentas-publicas.es/secciones/metodologia.html" />
-    <link rel="alternate" hreflang="en" href="https://cuentas-publicas.es/en/sections/methodology.html" />
+    <title>Tax Revenue | Spain Public Accounts</title>
+    <meta name="description" content="Tax revenue breakdown by tax type and autonomous community." />
+    <link rel="canonical" href="https://cuentas-publicas.es/en/sections/tax-revenue.html" />
+    <link rel="alternate" hreflang="es" href="https://cuentas-publicas.es/secciones/recaudacion.html" />
+    <link rel="alternate" hreflang="en" href="https://cuentas-publicas.es/en/sections/tax-revenue.html" />
     <style>
       body { font-family: Manrope, system-ui, sans-serif; max-width: 900px; margin: 2rem auto; padding: 0 1rem; color: #0f172a; }
       h1 { margin-bottom: .4rem; }
@@ -23,8 +23,8 @@
   </head>
   <body>
     <main>
-      <h1>Methodology and Sources</h1>
-      <p class="muted">Static route for SEO indexing · How dashboard data is downloaded, validated and transformed.</p>
+      <h1>Tax Revenue</h1>
+      <p class="muted">Static route for SEO indexing · Tax revenue breakdown by tax type and autonomous community.</p>
       <p class="muted">This page is generated automatically from the same datasets used by the SPA. Updated: Feb 20, 2026, 11:00 PM.</p>
 
       <section class="grid" aria-label="Main metrics">
@@ -50,10 +50,10 @@
         </article>
       </section>
 
-      <a class="cta" href="https://cuentas-publicas.es/?section=metodologia&lang=en">Open interactive dashboard section</a>
+      <a class="cta" href="https://cuentas-publicas.es/?section=recaudacion&lang=en">Open interactive dashboard section</a>
       <div class="links">
         <a href="https://cuentas-publicas.es/">Back to dashboard home</a>
-        <a href="https://cuentas-publicas.es/en/sections/methodology.html">Language: EN</a>
+        <a href="https://cuentas-publicas.es/en/sections/tax-revenue.html">Language: EN</a>
       </div>
     </main>
   </body>
