--- a/public/secciones/recaudacion.html
+++ b/public/secciones/recaudacion.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pensiones y Seguridad Social | Cuentas Públicas de España</title>
-    <meta name="description" content="Nómina mensual, déficit contributivo y ratio cotizantes/pensionista." />
-    <link rel="canonical" href="https://cuentas-publicas.es/secciones/pensiones.html" />
-    <link rel="alternate" hreflang="es" href="https://cuentas-publicas.es/secciones/pensiones.html" />
-    <link rel="alternate" hreflang="en" href="https://cuentas-publicas.es/en/sections/pensions.html" />
+    <title>Recaudación Tributaria | Cuentas Públicas de España</title>
+    <meta name="description" content="Desglose de la recaudación tributaria por impuesto y comunidad autónoma." />
+    <link rel="canonical" href="https://cuentas-publicas.es/secciones/recaudacion.html" />
+    <link rel="alternate" hreflang="es" href="https://cuentas-publicas.es/secciones/recaudacion.html" />
+    <link rel="alternate" hreflang="en" href="https://cuentas-publicas.es/en/sections/tax-revenue.html" />
     <style>
       body { font-family: Manrope, system-ui, sans-serif; max-width: 900px; margin: 2rem auto; padding: 0 1rem; color: #0f172a; }
       h1 { margin-bottom: .4rem; }
@@ -23,8 +23,8 @@
   </head>
   <body>
     <main>
-      <h1>Pensiones y Seguridad Social</h1>
-      <p class="muted">Ruta estática para indexación SEO · Nómina mensual, déficit contributivo y ratio cotizantes/pensionista.</p>
+      <h1>Recaudación Tributaria</h1>
+      <p class="muted">Ruta estática para indexación SEO · Desglose de la recaudación tributaria por impuesto y comunidad autónoma.</p>
       <p class="muted">Esta página se genera automáticamente con los mismos datasets de la SPA. Actualizado: 20 feb 2026, 23:00.</p>
 
       <section class="grid" aria-label="Métricas principales">
@@ -50,10 +50,10 @@
         </article>
       </section>
 
-      <a class="cta" href="https://cuentas-publicas.es/?section=pensiones">Abrir sección interactiva del dashboard</a>
+      <a class="cta" href="https://cuentas-publicas.es/?section=recaudacion">Abrir sección interactiva del dashboard</a>
       <div class="links">
         <a href="https://cuentas-publicas.es/">Volver al inicio del dashboard</a>
-        <a href="https://cuentas-publicas.es/secciones/pensiones.html">Idioma: ES</a>
+        <a href="https://cuentas-publicas.es/secciones/recaudacion.html">Idioma: ES</a>
       </div>
     </main>
   </body>
